--- a/ProjecIntegration.Api/Blazor.UI/Client/Page/ProfileViewer.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Client/Page/ProfileViewer.razor
@@ -52,7 +52,7 @@
                 <div class="col"></div>
                 <div class="col-sm-9">
                     <p class="lead"> Rappel tester l'auth coté server depuis blazor</p>
-                    <button type="button" class="col-sm-9" @onclick="() => GetAuth()">
+                    <button type="button" class="col-sm-9 btn btn-warning" @onclick="() => GetAuth()">
                         test auth
                     </button>
                 </div>
