--- a/ProjecIntegration.Api/Blazor.UI/Client/Page/ReservationComponent/PieceReservation.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Client/Page/ReservationComponent/PieceReservation.razor
@@ -1,4 +1,4 @@
-﻿@page "/PieceClient/{Id:int}"
+﻿@page "/pieceClient/{Id:int}"
 @using Microsoft.AspNetCore.Components.QuickGrid
 @inject Blazor.UI.services.IPieceService servPiece;
 @inject Blazor.UI.services.IComplexeService Servcomp;
