--- a/ProjecIntegration.Api/Blazor.UI/Layout/NavMenu.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Layout/NavMenu.razor
@@ -11,32 +11,22 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+                <i class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></i> Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="profileViewer">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Profile
+                <i class="bi bi-list-nested-nav-menu" aria-hidden="true"></i> Profile
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="reservation">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Reservation
+                <i class="bi bi-basket" aria-hidden="true"></i> Reservation
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="manager">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Manager
+                <i class="bi bi-c" aria-hidden="true"></i> Manager
             </NavLink>
         </div>
     </nav>
