--- a/ProjecIntegration.Api/Blazor.UI/Client/manager/Manager.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Client/manager/Manager.razor
@@ -50,7 +50,11 @@
                 <SallerRepresentation></SallerRepresentation>
             </div>
         </div>
-  
+        <div class="m-4 p-4">
+            <div class="container bg-light rounded-2 m-4 p-4">
+                <Blazor.UI.Client.Page.RepresentationPage.PieceDropDown></Blazor.UI.Client.Page.RepresentationPage.PieceDropDown>
+            </div>
+        </div>
     }
 
     @if (isSalle)
@@ -107,4 +111,5 @@
     {
         // Implement logic to get Complexes
     }
+   
 }
