--- a/ProjecIntegration.Api/Blazor.UI/Client/Page/Comp/ComplexeUpdatet.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Client/Page/Comp/ComplexeUpdatet.razor
@@ -4,15 +4,15 @@
 @if (updateComplexe != null)
 {
     <form>
-        <div class=" form-group">
-            <label for="name">Name:</label>
-            <input id="name" @bind="updateComplexe.Name" />
+        <div class=" form-group mb-3">
+            <label class="form-label" for="name">Name:</label>
+            <input class="form-control" id="name" @bind="updateComplexe.Name" />
 
-            <label for="description">Description:</label>
-            <input id="description" @bind="updateComplexe.Description" />
+            <label class="form-label" for="description">Description:</label>
+            <input class="form-control" id="description" @bind="updateComplexe.Description" />
 
-            <label for="address">Address:</label>
-            <input id="address" @bind="updateComplexe.Adress" />
+            <label class="form-label" for="address">Address:</label>
+            <input class="form-control" id="address" @bind="updateComplexe.Adress" />
 
             <!-- Add other input fields based on your UpdateComplexeDto properties -->
 
