--- a/ProjecIntegration.Api/Blazor.UI/Client/Page/MakeCommand/ManageCommand.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Client/Page/MakeCommand/ManageCommand.razor
@@ -6,13 +6,13 @@
 @inject Blazor.UI.services.ICommandService ServCommande;
 
 @inject Microsoft.AspNetCore.Components.NavigationManager manager
-<div class="jumbotron m-2 p-2 bg-light">
+<div class="jumbotron m-2 p-2 bg-light text-lg-center">
     <div class="m-2 p-2">
-        <h3 class="display-3 ">finalisation de la commande de Commande</h3>
+        <h3 class="display-3 ">Finalisation de la commande de Commande</h3>
 
     </div>
 </div>
-<div class="row float-end">
+<div class=" btn-group rounded float-end">
     <div class="col"></div>
     <div class="col"></div>
     <div class="col"></div>
@@ -28,53 +28,62 @@
             <div>
                 <h3>Résumer de la commande </h3>
             </div>
-            <div class="p-3 m-3 bg-primary rounded">
-                <div class="bg-light m-2 p-4 form-group rounded-5 border">
-                     <div>
-                         <p><strong>titre</strong>: @piececlt.Titre</p>
-                            <p><strong>durée de la pîece</strong>: @piececlt.Duree minutes</p>
-                     </div>
-                    <div>
-                         <p><strong>Salle:</strong> @salleclt.Name</p>
-                    </div>
-                    <div>
-                            <p><strong>séance:</strong> @repclt.Seance </p>
-                    </div>
+            <div class="p-3 m-3 bg-primary bg-opacity-10 rounded-5">
+                <div class="bg-light m-2 p-4 rounded-5 border">
+                    <div class="card">
+                         <div class="card-header">
+                             <p><strong>titre</strong>: @piececlt.Titre</p>
+                                <p><strong>durée de la pîece</strong>: @piececlt.Duree minutes</p>
+                         </div>
+                         <div class="card-body">
+
+                            <div>
+                                 <p><strong>Salle:</strong> @salleclt.Name</p>
+                            </div>
+                            <div>
+                                    <p><strong>séance:</strong> @repclt.Seance </p>
+                            </div>
                    
-                    <div class="p-2 input-group m-3">
-                        <p><strong>nombre de ticket</strong></p>
-                        <br>
-                        <input @oninput="UpdatePrice" class="form-control p-2" type="number" />
-                    </div>
-                    <div>
-                        <h3>Prix</h3>
-                        <div>
-                            <p>@Priceclt</p>
-                        </div>
-                    </div>
-                    <div>
-                            <button type="button" class="btn btn-warning p-2" @onclick="MakingCommande">
-                                nombre de ticket désirée</button>
+                            <div class="p-2 input-group m-3">
+                                <p class="pe-2"><strong>nombre de ticket</strong></p>
+                                <br>
+                                <input @oninput="UpdatePrice" class="form-control p-2 ps-2 border border-dark" type="number" />
+                            </div>
+                         </div>
+                         <div class="card-footer">
+                            <div>
+                                <h3>Prix</h3>
+                                <div>
+                                    <p>@Priceclt</p>
+                                </div>
+                            </div>
+                            <div>
+                               <button type="button" class="btn btn-warning p-2 float-end" @onclick="MakingCommande">
+                                        nombre de ticket désirée
+                              </button>
+                            </div>
+                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
     </div>
-    <div class="col"></div>
-    <div class="col">
+       <div class="col flex-column">
             @if (commandeMade != null)
             {
 
-                <div class ="bg-info m-2 p-2 rounded">
-                    <h4>Commande</h4>
-                    <p>Auth: @commandeMade.AuthId</p>
-                    <p>represnetaiton: @commandeMade.IdRepresentation</p>
-                    <p>nombre de place:@commandeMade.NombreDePlace</p>
+                <div class ="bg-info bg-opacity-10 m-2 p-2 rounded">
+                    <div class="m-2 p-2 bg-light">
+                        <h4>Commande</h4>
+                        <p>Auth: @commandeMade.AuthId</p>
+                        <p>represnetaiton: @commandeMade.IdRepresentation</p>
+                        <p>nombre de place:@commandeMade.NombreDePlace</p>
+                    </div>
                 </div>
                 foreach (var item in commandeMade.Tickets)
                 {
-                    <div class="m-2 p-2 rounded">
+                    <div class="m-2 p-2 rounded ">
                       
                         <div class="card" style="width: 18rem;">
                             <div class="card-body bg-light">
