--- a/ProjecIntegration.Api/Blazor.UI/Layout/NavMenu.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Layout/NavMenu.razor
@@ -25,6 +25,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="modulereservation">
+                <i class="bi bi-basket" aria-hidden="true"></i> Reservation
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="manager">
                 <i class="bi bi-c" aria-hidden="true"></i> Manager
             </NavLink>
