--- a/ProjecIntegration.Api/Blazor.UI/Client/Page/Comp/Complexe.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Client/Page/Comp/Complexe.razor
@@ -17,7 +17,7 @@
 }
 else
 {
-    <div class="border rounded-2 col m-2 p-4">
+    <div class="border rounded-2 col m-2 p-4 w-50">
        <QuickGrid Items="@complexetab.AsQueryable()">
             <PropertyColumn Property="@(p => p.Id)" Sortable="true">
                 <TemplateColumn Context="item">
