--- a/ProjecIntegration.Api/Blazor.UI/Client/Shared/Load.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Client/Shared/Load.razor
@@ -1,5 +1,5 @@
 ﻿
-<div class="float-md-none bg-light rounded m-2 p-2">
+<div class="float-md-none bg-light rounded m-2 p-2 w-25">
     <div class="m-2 p-2">
         @if (loadParam == null)
         {
