--- a/ProjecIntegration.Api/Blazor.UI/Client/manager/Manager.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Client/manager/Manager.razor
@@ -48,7 +48,7 @@
     {
        
         <div class="m-4 p-4">
-            <div class="container bg-light rounded-2 m-4 p-4">
+            <div class="container bg-light rounded-2 m-4 p-4 w-50">
                 <Blazor.UI.Client.Page.RepresentationPage.PieceDropDown></Blazor.UI.Client.Page.RepresentationPage.PieceDropDown>
             </div>
         </div>
