--- a/ProjecIntegration.Api/Blazor.UI/Pages/Home.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Pages/Home.razor
@@ -3,10 +3,13 @@
 <PageTitle>Home</PageTitle>
 <br />
 <div class="jumbotron bg-light p-4 rounded-3 text-lg-center">
-    <h1 class="display-4">Hello, world!</h1>
+    <h1 class="display-4">Toi qui entre en ce lieu,Abandonne tout espoire</h1>
     <p class="lead">Bienvenu sur theatre.com</p>
     <hr class="my-4">
     <p>pour faire une reservation en fonction d'une pièce ou depuis un complexe appuyez sur les bouton en bas</p>
+    <div class="p-4 m-4 rounded">
+        <img class=" img-thumbnail rounded-3 w-50 h-50" src="/images/image_processing20191110-10396-o8clav.gif" />
+    </div>
     <p class="lead">
         <div>
             <h5>Presentation</h5>
