--- a/ProjecIntegration.Api/Blazor.UI/Client/Page/MakeCommand/DisplayCommand.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Client/Page/MakeCommand/DisplayCommand.razor
@@ -1,6 +1,6 @@
 ﻿
 
-<div class="w-50 m-2 shadow">
+<div class="w-25 m-2 shadow">
 
     <div class="card">
         <div class="card-header">
@@ -13,13 +13,12 @@
 
                 @foreach(var item in CommandDone)
                 {
-                    <div class="card" style="width: 18rem;">
+                    <div class="card shadow" style="width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title"></h5>
                             <h6 class="card-subtitle mb-2 text-body-secondary"></h6>
                             <p class="card-text">@item.NombreDePlace</p>
-                            <a href="#" class="card-link">Card link</a>
-                            <a href="#" class="card-link">Another link</a>
+                            
                         </div>
                     </div>
                 }
@@ -37,5 +36,6 @@
     [Parameter]
     public List<CommandDto>? CommandDone { get; set; }
     
+  
     
 }
