--- a/ProjecIntegration.Api/Blazor.UI/Client/Page/ReservationComponent/ComplexeDropDown.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Client/Page/ReservationComponent/ComplexeDropDown.razor
@@ -16,7 +16,7 @@
         <br />
     @if (PieceTab != null)
     {
-        <div class="bg-light m-2 p-2 rounded-4">
+        <div class="bg-light m-2 p-2 rounded-4 w-50">
             <div class="m-2 p-2">
                 <QuickGrid Items="@PieceTab.AsQueryable()">
                     <PropertyColumn Property="@(p => p.Titre)" Sortable="true" Title="Title" />
