--- a/ProjecIntegration.Api/Blazor.UI/Client/manager/ComplexeSalle.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Client/manager/ComplexeSalle.razor
@@ -11,7 +11,7 @@
     }
     else
     {
-        <div class="col-sm-12 border rounded-2  mb-2 mt-2 pe-2 ps-2">
+        <div class="col-sm-12 border rounded-2  mb-2 mt-2 pe-2 ps-2 w-50">
             div
            <QuickGrid Items="@complexetab.AsQueryable()">
             <PropertyColumn Property="@(p => p.Id)" Sortable="true">
